--- a/css/style.css
+++ b/css/style.css
@@ -34,12 +34,12 @@ body{
 
 .landpage{
   width: 100%;
-  height: 90%;
+  height: 860px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
-  background-image: url("../images/city-background.jpg");
+  background-image: url("../img/city-background.jpg");
   overflow: none;
 }
 
@@ -56,6 +56,8 @@ body{
   margin: auto;
   margin-left: 10%;
   margin-top: 40px;
+  width: 250px;
+  height: auto;
 }
 
 .menu-holder{
