--- a/layouts/default.html
+++ b/layouts/default.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="{{ asset('css/style.css') }}" type="text/css">
     <link rel="stylesheet" href="{{ asset('css/animate.css') }}" type="text/css">
     <link rel="stylesheet" href="{{ asset('css/custom.css', {dynamic: true}) }}" type="text/css">
+    <script type="text/javascript" src="{{ asset('js/fixednav.js') }}"></script>
+
 
     <style>
         {{ settings.custom_css }}
