--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body{
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
-  background-image: url("../images/city-background.jpg");
+  background-image: url("../img/city-background.jpg");
   overflow: none;
 }
 
