--- a/layouts/default.html
+++ b/layouts/default.html
@@ -119,6 +119,7 @@
     {{ store.chat }}
 
     <!-- theme scripts-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="{{ asset('js/slick.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('js/theme.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('js/fixednav.js') }}"></script>
