--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body{
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
-  background-image: url("../img/city-background.jpg");
+  background-image: url("../images/city-background.jpg");
   overflow: none;
 }
 
@@ -364,6 +364,12 @@ body{
   flex-direction: row;
   flex-wrap: nowrap;
   height: 120px;
+  width: 100.8%;
+}
+.header-bar{
+  position: fixed;
+  display: none;
+  height: 120px;
   width: 100%;
-  background-color: #0a0a0ab8;
+  background-color: #0a0a0a63;
 }
