--- a/layouts/default.html
+++ b/layouts/default.html
@@ -43,7 +43,8 @@
     {% element 'snippets/menu-mobile' %}
 
     <div class="application">
-
+      
+      {% element 'header' %}
 
         <main class="site-main container">
             <div class="row">
