--- a/layouts/default.html
+++ b/layouts/default.html
@@ -50,6 +50,49 @@
       {% endif %}
 
         <main class="site-main container">
+          <section id="content" class="content">
+            <div class="post-holder">
+              <div class="title-post-front">
+                <span><i><t5><t5></i></span>
+              </div>
+              <div class="text-post-front">
+                <div class="product-holder">
+                  <div class="product-category-holder">
+                    <div class="product-small">
+                      <span class="small-title">CORSAIR</span>
+                      <div class="btn-holder3">
+                        <button class="btn-login-black"><a href="#">VEJA MAIS</a></button>
+                        </div>
+                    </div>
+                    <div class="product-small2">
+                      <span class="small-title2">ROCCAT</span>
+                      <div class="btn-holder4">
+                        <button class="btn-login"><a href="#">VEJA MAIS</a></button>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="product-middle">
+                    <div class="product-big-wide">
+                      <div class="title-holder">
+                      <span class="wide-title">HYPERX</span>
+                      <div class="btn-holder">
+                        <button class="btn-login"><a href="#">VEJA MAIS</a></button>
+                        </div>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="product-right">
+                    <div class="product-big-tall"><div class="title-holder">
+                    <span class="tall-title">LOGITECH</span>
+                    <div class="btn-holder2">
+                      <button class="btn-login"><a href="#">VEJA MAIS</a></button>
+                      </div>
+                      </div></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
             <div class="row">
 
                 {% if "central" in pages.current %}
