--- a/layouts/default.html
+++ b/layouts/default.html
@@ -50,7 +50,7 @@
       {% endif %}
 
         <main class="site-main container">
-          <section id="content" class="content">
+          <section class="content">
             <div class="post-holder">
               <div class="title-post-front">
                 <span><i><t5><t5></i></span>
