--- a/layouts/default.html
+++ b/layouts/default.html
@@ -49,7 +49,7 @@
       {% else %}
       {% endif %}
 
-        <main class="site-main container">
+        <main class="site-main">
           <section class="content">
             <div class="post-holder">
               <div class="title-post-front">
