Added products section

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -94,6 +94,11 @@
             </div>
           </div>
         </section>
+        <div class="product-list-title">
+          <div class="product-big-titles">
+          <span>PRODUTOS POPULARES</span>
+          </div>
+        </div>
       {% else %}
       {% endif %}
 
