--- a/css/style.css
+++ b/css/style.css
@@ -500,3 +500,21 @@ body{
   margin-left: 30px;
 
 }
+
+.product-list-title{
+  width: 100%;
+  height: 100px;
+  background-image: url('../img/gamingwallpaper.jpg');
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.product-big-titles{
+  position: relative;
+  top: 35px;
+  color: white;
+  text-align: center;
+  font-family: 'Nova Square';
+  font-size: 30px;
+}
