--- a/layouts/default.html
+++ b/layouts/default.html
@@ -102,9 +102,9 @@
       {% else %}
       {% endif %}
 
-            <div class="row">
+            <div class="row darken">
 
-                
+
 
                 <section class="page-content col-sm-9">
                     {{ content_for_layout }}
