--- a/css/style.css
+++ b/css/style.css
@@ -436,7 +436,7 @@ body{
   display: none;
   height: 120px;
   width: 100%;
-  background-color: #0a0a0a63;
+  background-color: #0a0a0a;
   z-index: 100;
 }
 
