Fixed products row

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -106,7 +106,7 @@
 
 
 
-                <section class="page-content col-sm-9">
+                <section class="page-content">
                     {{ content_for_layout }}
                 </section>
 
