--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,12 @@
   }
 }
 
+@media screen and (max-width: 767px){
+  .products-item-each{
+    width: auto !important;
+  }
+}
+
 
 body{
   overflow: overlay;
