--- a/layouts/default.html
+++ b/layouts/default.html
@@ -96,7 +96,7 @@
         </section>
         <div class="product-list-title">
           <div class="product-big-titles">
-          <span>PRODUTOS POPULARES</span>
+          <span>PRODUTOS EM DESTAQUE</span>
           </div>
         </div>
       {% else %}
