--- a/css/style.css
+++ b/css/style.css
@@ -271,7 +271,7 @@ body{
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  background: #ffffff;
+  background: #0c0c0c;
   width: 100%;
   transition-duration: 1s;
 }
