--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@
   }
 }
 
-@media screen and (min-width: 1589px){
+@media screen and (max-width: 1589px){
   .product-big-tall2{
     display: none !important;
   }
