--- a/css/style.css
+++ b/css/style.css
@@ -518,6 +518,15 @@ body{
   margin-bottom: 10px;
 }
 
+.tall-title2{
+  color: white;
+  font-family: 'Nova Square';
+  font-size: 38px;
+  margin-right: 65px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 .btn-holder2{
   margin-top: 288px;
   margin-left: 9px;
