--- a/layouts/default.html
+++ b/layouts/default.html
@@ -59,11 +59,12 @@
             <div class="text-post-front">
               <div class="product-right">
                 <div class="product-big-tall2"><div class="title-holder">
-                <span class="tall-title">MOTOSPEED</span>
+                <span class="tall-title2">MOTOSPEED</span>
                 <div class="btn-holder2">
                   <button class="btn-login"><a href="#">VEJA MAIS</a></button>
                   </div>
-                  </div></div>
+                  </div>
+                </div>
               </div>
               <div class="product-holder">
                 <div class="product-category-holder">
