--- a/css/style.css
+++ b/css/style.css
@@ -544,6 +544,11 @@ body{
 
 }
 
+.btn-holder5{
+  margin-top: 330px;
+  margin-left: 9px;
+}
+
 .product-list-title{
   width: 100%;
   height: 162px;
