--- a/css/style.css
+++ b/css/style.css
@@ -578,7 +578,7 @@ body{
 .product-comprar{
   width: 100px;
   height: 40px;
-  background-color: #e37d1a;
+  background-color: #ff4e03;
   float: right;
   text-align: center;
   -webkit-border-radius: 10px;
