--- a/layouts/default.html
+++ b/layouts/default.html
@@ -133,6 +133,33 @@
                     {% endif %}
                 {% endif %}
             </div>
+            <div class="product-list-title">
+              <div class="product-big-titles">
+              <span>NOVOS PRODUTOS</span>
+              </div>
+            </div>
+            <div class="row darken">
+
+
+
+                <section class="page-content">
+                    {{ content_for_layout }}
+                </section>
+
+                {% if pages.current in ['catalog', 'search'] %}
+                    {% if settings.history_position == 1 %}
+                        <section class="products-visited col-sm-12">
+                            <h4>{{ Translation('confira_tambem') }}</h4>
+                            <h3 class="related-title">{{ Translation('produtos_visitados') }}</h3>
+                            {% element 'snippets/history' {
+                                'store.id': store.id,
+                                'pages.current': pages.current,
+                                'category.id': category.id
+                            } %}
+                        </section>
+                    {% endif %}
+                {% endif %}
+            </div>
         </main>
 
         {% element 'footer' %}
