--- a/layouts/default.html
+++ b/layouts/default.html
@@ -77,7 +77,7 @@
                   <div class="product-small2">
                     <span class="small-title2">ROCCAT</span>
                     <div class="btn-holder4">
-                      <button class="btn-login"><a href="#">VEJA MAIS</a></button>
+                      <button class="btn-login"><a href="http://www.tecnomult.com/teclado?loja=657632&palavra_busca=&filtrar_marca=ROCCAT&order=3&categoria=47">VEJA MAIS</a></button>
                       </div>
                   </div>
                 </div>
