Added second version of the header

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -47,6 +47,7 @@
       {% if pages.current in ['home'] %}
       {% element 'header' %}
       {% else %}
+      {% element 'header-small' %}
       {% endif %}
 
       {% if pages.current in ['home'] %}
