--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,16 @@ body{
   overflow: none;
 }
 
+.landnopage{
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-image: url("../img/city-background.jpg");
+  overflow: none;
+}
+
 .header{
   display: flex;
   flex-direction: row;
