Updated product display

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -106,7 +106,7 @@
         </section>
         <div class="product-list-title">
           <div class="product-big-titles">
-          <span>PRODUTOS EM DESTAQUE</span>
+          <span>LANÇAMENTOS</span>
           </div>
         </div>
       {% else %}
