--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,12 @@
   }
 }
 
+@media screen and (max-width: 981px){
+  .product-middle{
+    display: none !important;
+  }
+}
+
 
 body{
   overflow-x: hidden;
