--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,13 @@
   }
 }
 
+@media screen and (max-width: 1137px){
+  .products-item-each{
+    width: 24% !important;
+    margin-left: 4px !important;
+  }
+}
+
 
 body{
   overflow-x: hidden;
