--- a/css/style.css
+++ b/css/style.css
@@ -53,15 +53,15 @@
 
 @media screen and (max-width: 1406px){
   .products-item-each{
-    width: 22% !important;
-    margin-left: 28px !important;
+    width: 22%;
+    margin-left: 28px;
   }
 }
 
 @media screen and (max-width: 1137px){
   .products-item-each{
-    width: 25% !important;
-    margin-left: 0px !important;
+    width: 25%;
+    margin-left: 0px ;
   }
 }
 
