--- a/layouts/default.html
+++ b/layouts/default.html
@@ -134,7 +134,7 @@
 
         {% if pages.current in ['catalog', 'search', 'product'] %}
             {% if settings.history_position == 2 %}
-              
+
             {% endif %}
         {% endif %}
 
@@ -157,6 +157,7 @@
 
     <!-- theme scripts-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script type="text/javascript" src="{{ asset('js/slick.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('js/theme.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('js/fixednav.js') }}"></script>
