--- a/css/style.css
+++ b/css/style.css
@@ -522,7 +522,7 @@ body{
   display: none;
   height: 120px;
   width: 102%;
-  background-color: #0a0a0a;
+  background-color: #0a0a0a3d;
   z-index: 100;
 }
 
