Fixed login form

--- a/css/style.css
+++ b/css/style.css
@@ -769,3 +769,10 @@ body{
   margin-top: 10px;
   color: white;
 }
+
+.costumer-front{
+  color: white !important;
+  width: 314px;
+  margin-left: 281px;
+  margin-top: 10px;
+}
