Trying to fix the hover effect

--- a/css/style.css
+++ b/css/style.css
@@ -789,7 +789,7 @@ body{
   margin-bottom: 9px;
 }
 
-.my-account-login{
+.my-account-login > span{
   display: none;
   font-family: roboto;
   font-size: 11px;
