--- a/css/style.css
+++ b/css/style.css
@@ -800,7 +800,7 @@ body{
   opacity: 0;
 }
 
-.search-bar-side2:hover > .my-account-login > span{
+.search-bar-side2:hover > .my-account-login{
   transition: 1000ms;
   opacity: 1;
 }
