--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,12 @@ body{
   background-attachment: fixed;
   background-image: url("../img/city-background.jpg");
   overflow: none;
+  transition: 1000ms;
 }
+
+.b1 { background: hsl(0, 50%, 50%); transition: 1000ms; }
+.b2 { background: hsl(30, 50%, 50%); transition: 1000ms; }
+.b3 { background: hsl(60, 50%, 50%); transition: 1000ms; }
 
 .landnopage{
   width: 100%;
