--- a/layouts/default.html
+++ b/layouts/default.html
@@ -161,6 +161,7 @@
     <script type="text/javascript" src="{{ asset('js/slick.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('js/theme.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('js/fixednav.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('js/mainbanner.js') }}"></script>
 
     {% if settings.background_image %}
     <style>
