--- a/css/style.css
+++ b/css/style.css
@@ -92,10 +92,42 @@ body{
   transition: 1000ms;
 }
 
-.b1 { background: hsl(0, 50%, 50%); transition: 1000ms; }
-.b2 { background: hsl(30, 50%, 50%); transition: 1000ms; }
-.b3 { background: hsl(60, 50%, 50%); transition: 1000ms; }
+.b1 {
+  width: 100%;
+  height: 860px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  overflow: none;
+  background: hsl(0, 50%, 50%);
+  transition: 1000ms;
+ }
 
+ .b2 {
+   width: 100%;
+   height: 860px;
+   background-size: cover;
+   background-repeat: no-repeat;
+   background-position: center;
+   background-attachment: fixed;
+   overflow: none;
+   background: hsl(30, 50%, 50%);
+   transition: 1000ms;
+  }
+
+  .b3 {
+    width: 100%;
+    height: 860px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    overflow: none;
+    background: hsl(60, 50%, 50%);
+    transition: 1000ms;
+   }
+   
 .landnopage{
   width: 100%;
   background-size: cover;
