--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@ body{
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
+  background-image: url("../img/city-background.jpg");
   overflow: none;
   background: hsl(0, 50%, 50%);
   transition: 1000ms;
@@ -127,7 +128,7 @@ body{
     background: hsl(60, 50%, 50%);
     transition: 1000ms;
    }
-   
+
 .landnopage{
   width: 100%;
   background-size: cover;
