--- a/layouts/default.html
+++ b/layouts/default.html
@@ -64,7 +64,7 @@
                   <div class="product-big-tall2"><div class="title-holder">
                   <span class="tall-title2">MOTOSPEED</span>
                   <div class="btn-holder5">
-                    <button class="btn-login"><a href="https://tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=MOTOSPEED&order=5&categoria=45">VEJA MAIS</a></button>
+                    <button class="btn-login"><a href="https://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=MOTOSPEED&order=5&categoria=45">VEJA MAIS</a></button>
                     </div>
                     </div>
                   </div>
@@ -73,7 +73,7 @@
                   <div class="product-small">
                     <span class="small-title">CORSAIR</span>
                     <div class="btn-holder3">
-                      <button class="btn-login-black"><a href="https://tecnomult.com/teclado?loja=657632&palavra_busca=&filtrar_marca=CORSAIR&order=3&categoria=47">VEJA MAIS</a></button>
+                      <button class="btn-login-black"><a href="https://www.tecnomult.com/teclado?loja=657632&palavra_busca=&filtrar_marca=CORSAIR&order=3&categoria=47">VEJA MAIS</a></button>
                       </div>
                   </div>
                   <div class="product-small2">
@@ -88,7 +88,7 @@
                     <div class="title-holder">
                     <span class="wide-title">HYPERX</span>
                     <div class="btn-holder">
-                      <button class="btn-login"><a href="https://tecnomult.com/headset?loja=657632&palavra_busca=&filtrar_marca=HYPER+X&order=3&categoria=25">VEJA MAIS</a></button>
+                      <button class="btn-login"><a href="https://www.tecnomult.com/headset?loja=657632&palavra_busca=&filtrar_marca=HYPER+X&order=3&categoria=25">VEJA MAIS</a></button>
                       </div>
                       </div>
                   </div>
@@ -97,7 +97,7 @@
                   <div class="product-big-tall"><div class="title-holder">
                   <span class="tall-title">LOGITECH</span>
                   <div class="btn-holder2">
-                    <button class="btn-login"><a href="https://tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=LOGITECH&order=3&categoria=45">VEJA MAIS</a></button>
+                    <button class="btn-login"><a href="https://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=LOGITECH&order=3&categoria=45">VEJA MAIS</a></button>
                     </div>
                     </div></div>
                 </div>
