--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ body{
     background-position: center;
     background-attachment: fixed;
     overflow: none;
-    background-image: url("../img/lightring.jpg");
+    background-image: url("../img/lightring2.jpg");
     transition: 1000ms;
    }
 
