--- a/css/style.css
+++ b/css/style.css
@@ -869,7 +869,6 @@ body{
 .sidenav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
-  display: block;
   transition: 0.3s;
 }
 
@@ -895,4 +894,10 @@ body{
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
+}
+
+.mobile-holder {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
 }
