--- a/layouts/error.html
+++ b/layouts/error.html
@@ -3,7 +3,7 @@
 <head>
     {{ html.charset() }}
     {{ tray.meta }}
-    <!-- [if IE]<meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
+    <!-- [if IE]<meta https-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {{ tray.styles }}
     <link rel="stylesheet" href="{{ asset('css/bootstrap/bootstrap.min.css') }}">
