--- a/css/animate.css
+++ b/css/animate.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 
 /*!
- * animate.css -http://daneden.me/animate
+ * animate.css -https://daneden.me/animate
  * Version - 3.6.0
- * Licensed under the MIT license - http://opensource.org/licenses/MIT
+ * Licensed under the MIT license - https://opensource.org/licenses/MIT
  *
  * Copyright (c) 2018 Daniel Eden
  */
@@ -124,7 +124,7 @@
   animation-name: flash;
 }
 
-/* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
+/* originally authored by Nick Pettit - httpss://github.com/nickpettit/glide */
 
 @-webkit-keyframes pulse {
   from {
@@ -502,7 +502,7 @@
   animation-name: tada;
 }
 
-/* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
+/* originally authored by Nick Pettit - httpss://github.com/nickpettit/glide */
 
 @-webkit-keyframes wobble {
   from {
@@ -2785,7 +2785,7 @@
   animation-name: jackInTheBox;
 }
 
-/* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
+/* originally authored by Nick Pettit - httpss://github.com/nickpettit/glide */
 
 @-webkit-keyframes rollIn {
   from {
@@ -2820,7 +2820,7 @@
   animation-name: rollIn;
 }
 
-/* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
+/* originally authored by Nick Pettit - httpss://github.com/nickpettit/glide */
 
 @-webkit-keyframes rollOut {
   from {
